rightside and leftside fixed, dark mode on

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
 :root,
 body,
 html {
-  background-color: white;
+  background-color: black;
   box-sizing: border-box;
 }
 
